syntax = "proto3";

enum ClaimType {
  CLAIM_MATCH = 0;
  CLAIM_NOMATCH = 1;
}

message Claim {
  ClaimType type = 1;
  repeated uint32 cards = 2;
}

message Score {
  uint32 match = 1;
  uint32 matchwrong = 2;
  uint32 nomatch = 3;
  uint32 nomatchwrong = 4;
}

message UpdateEvent {
  message EventJoin {
    string name = 1;
  }
  message EventLeave {
    string name = 1;
  }
  message EventClaimed {
    string name = 1;
    ClaimType type = 2;
    enum Result {
      CORRECT = 0;
      WRONG = 1;
      LATE = 2;
    }
    Result result = 3;
    Score score = 4;
  }   
  oneof event_oneof {
    EventJoin join = 1;
    EventLeave leave = 2;
    EventClaimed claimed = 3;
  }
}

message Position {
  uint32 x = 1;
  uint32 y = 2;
}

message PlacedCard {
  Position position = 1;
  uint32 card = 2;
}

message UpdateChange {
  message ChangeDeal {
    repeated PlacedCard cards = 1;
  }
  message ChangeMatch {
    repeated Position positions = 1;
  }
  message ChangeMove {
    message MoveOne {
      Position from = 1;
      Position to = 2;
    }
    repeated MoveOne moves = 1;
  }
  oneof change_oneof {
    ChangeDeal deal = 1;
    ChangeMatch match = 2;
    ChangeMove move = 3;
  }
}

message UpdateFull {
  repeated PlacedCard cards = 1;
  uint32 deckSize = 2;
  message PlayerScore {
    string name = 1;
    Score score = 2;
  }
  repeated PlayerScore scores = 3;
}

message Update {
  oneof update_oneof {
    UpdateChange change = 2;
    UpdateEvent event = 3;
    UpdateFull full = 4;
  }
}
